// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backups File Service should get the file stat of a filename: service.getFileName 1`] = `
Object {
  "filename": "destinationDirectory/name/10/%2Fshare/toto/file1",
  "stats": Object {
    "atime": 1970-01-01T00:00:00.001Z,
    "atimeMs": 1,
    "birthtime": 1970-01-01T00:00:00.001Z,
    "birthtimeMs": 1,
    "blksize": 4096,
    "blocks": 1,
    "ctime": 1970-01-01T00:00:00.001Z,
    "ctimeMs": 1,
    "dev": 8675309,
    "gid": 0,
    "ino": Any<Number>,
    "mode": 33206,
    "mtime": 1970-01-01T00:00:00.001Z,
    "mtimeMs": 1,
    "nlink": 1,
    "rdev": 0,
    "size": 17,
    "uid": 0,
  },
}
`;

exports[`Backups File Service should list all files of a directory: listFiles[0] 1`] = `
Object {
  "atime": 1970-01-01T00:00:00.001Z,
  "atimeMs": 1,
  "birthtime": 1970-01-01T00:00:00.001Z,
  "birthtimeMs": 1,
  "blksize": 4096,
  "blocks": 1,
  "ctime": 1970-01-01T00:00:00.001Z,
  "ctimeMs": 1,
  "dev": 8675309,
  "gid": 0,
  "ino": Any<Number>,
  "mode": 16895,
  "mtime": 1970-01-01T00:00:00.001Z,
  "mtimeMs": 1,
  "name": Object {
    "data": Array [
      100,
      105,
      114,
      49,
    ],
    "type": "Buffer",
  },
  "nlink": 2,
  "rdev": 0,
  "size": 1,
  "type": "DIRECTORY",
  "uid": 0,
}
`;

exports[`Backups File Service should list all files of a directory: listFiles[1] 1`] = `
Object {
  "atime": 1970-01-01T00:00:00.001Z,
  "atimeMs": 1,
  "birthtime": 1970-01-01T00:00:00.001Z,
  "birthtimeMs": 1,
  "blksize": 4096,
  "blocks": 1,
  "ctime": 1970-01-01T00:00:00.001Z,
  "ctimeMs": 1,
  "dev": 8675309,
  "gid": 0,
  "ino": Any<Number>,
  "mode": 33206,
  "mtime": 1970-01-01T00:00:00.001Z,
  "mtimeMs": 1,
  "name": Object {
    "data": Array [
      102,
      105,
      108,
      101,
      49,
    ],
    "type": "Buffer",
  },
  "nlink": 1,
  "rdev": 0,
  "size": 17,
  "type": "REGULAR_FILE",
  "uid": 0,
}
`;

exports[`Backups File Service should list all share of a directory: listShare[0] 1`] = `
Object {
  "atime": 1970-01-01T00:00:00.001Z,
  "atimeMs": 1,
  "birthtime": 1970-01-01T00:00:00.001Z,
  "birthtimeMs": 1,
  "blksize": 4096,
  "blocks": 1,
  "ctime": 1970-01-01T00:00:00.001Z,
  "ctimeMs": 1,
  "dev": 8675309,
  "gid": 0,
  "ino": Any<Number>,
  "mode": 16895,
  "mtime": 1970-01-01T00:00:00.001Z,
  "mtimeMs": 1,
  "name": Object {
    "data": Array [
      100,
      105,
      114,
      49,
    ],
    "type": "Buffer",
  },
  "nlink": 2,
  "rdev": 0,
  "size": 1,
  "type": "DIRECTORY",
  "uid": 0,
}
`;

exports[`Backups File Service should list all share of a directory: listShare[1] 1`] = `
Object {
  "atime": 1970-01-01T00:00:00.001Z,
  "atimeMs": 1,
  "birthtime": 1970-01-01T00:00:00.001Z,
  "birthtimeMs": 1,
  "blksize": 4096,
  "blocks": 1,
  "ctime": 1970-01-01T00:00:00.001Z,
  "ctimeMs": 1,
  "dev": 8675309,
  "gid": 0,
  "ino": Any<Number>,
  "mode": 33206,
  "mtime": 1970-01-01T00:00:00.001Z,
  "mtimeMs": 1,
  "name": Object {
    "data": Array [
      102,
      105,
      108,
      101,
      49,
    ],
    "type": "Buffer",
  },
  "nlink": 1,
  "rdev": 0,
  "size": 17,
  "type": "REGULAR_FILE",
  "uid": 0,
}
`;
